2018-05-27 Shahzad Muzaffar  <@smuzaffar>
        * V05-07-16: Fix check-header rules to find correct product name
	for a given header file.

2018-05-23 Shahzad Muzaffar  <@smuzaffar>
	* V05-07-14: Added OpenCL device to AOCX compilation rule
	* V05-07-15: Do not generate cudaobj when run in syntax-only mode.

2018-05-15 Shahzad Muzaffar  <@smuzaffar>
        * V05-07-13: Use correct machine triplet for DNN.

2018-04-27 Shahzad Muzaffar  <@smuzaffar>
        * V05-07-10: Make use of CUDA_HOST[_REM]_CXXFLAGS.
	* V05-07-11: Allow to run dnn_name rules for bin products.
	* V05-07-12: Run check-headers only for local files. 

2018-04-23 Shahzad Muzaffar  <@smuzaffar>
	* V05-07-09: Added tensorflow graphs rules

2018-04-28 Shahzad Muzaffar  <@smuzaffar>
	* V05-07-08: Fixed PYTHON3PATH

2018-04-20 Shahzad Muzaffar  <@smuzaffar>
	* V05-07-07: Added check-headers rule for compiling headers with -fsyntaxonly

2018-04-15 Shahzad Muzaffar  <@smuzaffar>
	* V05-07-0[4,5,6]: Use $SCRAM instead of scram for hooks as scram is
	not in bath while building release.

2018-04-12 Shahzad Muzaffar  <@smuzaffar>
	* V05-07-03: Fix cuda/driver env: Set only for projects which has cuda

2018-04-11 Shahzad Muzaffar  <@smuzaffar>
	* V05-07-02: Added SCRAM runtime hooks for setting up Nvidia driver env

2018-04-10 David Lange <@davidlange6>
	* V05-07-01: Added PYTHON3PATH

2018-04-05 Shahzad Muzaffar  <@smuzaffar>
	* 05-05-86: Same as V05-05-83-01
	* V05-06-00: Same as V05-05-85
	* V05-07-00: Split Makefile.rules in few smaller files.
	- Generate File.ext.o instead of File.o to allow files with different
	extensions in same directories e.g Foo.cc and Foo.cu

2018-04-04 Shahzad Muzaffar  <@smuzaffar>
	* V05-05-83-01: Bug fix in caching compilation flags
	* V05-05-85: Bug fix in caching compilation flags

2018-03-24 David Lange <@davidlange6>
	* V05-05-84: Added cmssw-tool-conf PYTHON27PATH

2018-03-22 David Lange <@davidlange6>
	* V05-05-83: Migration to PYTHON27PATH to support python3
