@@ -1,3 +1,6 @@
+2018-05-28 Shahzad Muzaffar  <@smuzaffar>
+        * V05-07-17: Allow to set/remove flags for files.
+
 2018-05-27 Shahzad Muzaffar  <@smuzaffar>
         * V05-07-16: Fix check-header rules to find correct product name
 	for a given header file.
